tests/EtaX/EtaX.meth/EtaX.meth.02.check
// src:   val t3Sam0J: Sam0J = meth                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
// 2.13-base error
target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.02.scala:11: error: type mismatch;
 found   : String
 required: Sam0J
  val t3Sam0J: Sam0J = meth                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
                       ^
one error found

// 2.13-head error
target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.02.scala:11: error: type mismatch;
 found   : String
 required: Sam0J
  val t3Sam0J: Sam0J = meth                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
                       ^
1 error

// 2.13-new  ok   
// 3.0-old   error
-- [E100] Syntax Migration Warning: target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.02.scala:11:23 
11 |  val t3Sam0J: Sam0J = meth                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
   |                       ^^^^
   |                       method meth must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

-- [E007] Type Mismatch Error: target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.02.scala:11:23 
11 |  val t3Sam0J: Sam0J = meth                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
   |                       ^^^^
   |                       Found:    String
   |                       Required: Sam0J
1 warning found
1 error found

// 3.0       error
-- [E100] Syntax Error: target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.02.scala:11:23 
11 |  val t3Sam0J: Sam0J = meth                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
   |                       ^^^^
   |                       method meth must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

1 error found

// 3.1       error <no change>

error error ok    error error error
